<resources>

    <string name="app_name">BICSI Canada 2017 Conference</string>
    <string name="app_title">2017 BICSI Canada Conference</string>

    <string name="app_id">1420178141528021</string>
     <string name="action_settings">Settings</string>
    <string name="title_activity_main">BICSI App</string>
     <string name="title_activity_conf_sched">ConfSchedActivity</string>
    <string name="title_activity_exhibitor_hall_schedule">ExhibitorHallScheduleActivity</string>
    <string name="title_activity_exhibit_hall_schedule">ExhibitHallScheduleActivity</string>
    <string name="Logo">Logo</string>
    <string name="home">Home</string>
    <string name="alerts">Alerts</string>
    <string name="social">Photo Gallery</string>
    <string name="myBICSI">My BICSI</string>
    <string name="myPlanner">My Schedule</string>
	<string name="aboutUs">About Us</string>
	<string name="version">Version</string>
	<string name="conference">Conference</string>
	<string name="schedule">Schedule</string>
	<string name="presentations">Presentations</string>
	<string name="surveys">Surveys</string>
	<string name="exhibithall">Exhibit Hall</string>
	<string name="exhibitorsearch">Exhibitor Search</string>
	<string name="exhibitormap">Exhibitor Map</string>
	<string name="cecinfo">CEC Information</string>
	<string name="committee">New Product</string>
	<string name="meetings">Pavilion</string>
    <string name="newproduct">New Product</string>
    <string name="pavilion">Pavilion</string>
	<string name="training">Training and</string>
	<string name="exams">Exams</string>
	<string name="hotelinformation">Hotel Information</string>
	<string name="contactus">Contact Us</string>
	<string name="welcome">BICSI Welcome</string>
	<string name="comments">Email Your Comments</string>
    <string name="ImportDialog">Enter your Member ID to import your schedule.</string>
    <string name="memberId">Member ID</string>
	<string name="extraicon"></string>
	
	<string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="LoginBtn">Login</string>
    <string name="ImportBtn">Import Schedule</string>
    <string name="CancelBtn">Cancel</string>
    <string name="SignupBtn">Sign Up</string>
    <string name="LogoutBtn">Log Out</string>
    <string name="Welcome">Welcome!</string>
    <string name="ViewGallery">View Gallery</string>
    <string name="UploadPhoto">Upload Photo</string>
    <string name="WelcomeToGallery">Welcome to the Photo Gallery</string>
    
    <string name="ranklabel">"Uploaded by : "</string>
    <string name="countrylabel">"Country : "</string>
    <string name="populationlabel">"Comment : "</string>
    
    <string name="comment_label">Add a Comment</string>
    <string name="note_label">Add/Edit a Note</string>
    <string name="save_button_text">Save</string>
    <string name="cancel_button_text">Cancel</string>
    
    <string name="title_activity_new_meal">Photo Upload</string>
    <string name="title_activity_new_note">Session Note</string>
    <string name="logintext">If you have a user account for the Photo Gallery, please sign in below. If not, please sign up.</string>
	<string name="privacylink">View Privacy Policy</string>
	<string name="uploadwarning">Please tap the Camera icon to take a photo. All photos and comments will be reviewed before being posted to the gallery. Any photos with potential indecency issues will not be posted and your user account will be terminated.</string>
	<string name="comment_hint">Required</string>
    <string name="note_hint">Enter your notes...</string>
	
	
	<string name="bicsialerts">Alerts</string>
	
	<string name="feedWelMsg"><b>Welcome</b></string>   
    <string name="feedWelMsg1">to the My Products Community!</string>    
    <string name="feedWelMsg2">Share products, post comments, tag items as \"Want\" or \"Own\" and invite friends. You will see all the updates here.</string>
    <string name="feedWelMsg3">For less sharing, simply update your settings to the level you enjoy.</string>
	
	

	
	<string name="socialString">The Facebook app must already be installed on your device.</string>
	<string name="postToFB">quick post to facebook</string>
	<string name="postToTwitter">quick post to twitter</string>
	<string name="twitterFeed">twitter feed</string>
	
	<string name="noFacebookApp">Please install the Facebook app on your device.</string>
	
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Successfully posted \'%1$s\'.\nPost ID: %2$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="photo_post">Photo Post</string>
    <string name="you_picked">You picked:</string>
    <string name="no_friends_selected">&lt;No friends selected&gt;</string>
    <string name="no_place_selected">&lt;No place selected&gt;</string>
    <string name="pick_seattle_place">Pick a Seattle Place</string>
    <string name="exception">Exception: %1$s</string>
	<string name="post">Post</string>
	<string name="twitter">Twitter</string>
	
 <string name="some_hint">
  Type here to filter by date&#8230;
 </string>
 
 <string name="some_hint_confSched">
  Type here to filter by session name&#8230;
 </string>
 
 <string name="some_hint_comm">
  Type here to filter by meeting name&#8230;
 </string>
	
	
</resources>
