<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainActivity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#879dcc"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_weight="1.2"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imgFacebook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:src="@drawable/facebook" />

        <ImageView
            android:id="@+id/imgTwitter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:src="@drawable/twitter" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:layout_weight="3.3"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight=".6"
            android:layout_gravity="center"
            android:paddingLeft="20dp"
            android:textColor="@color/black"
            android:textSize="15sp" 
            android:text="@string/socialString"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight=".8"
            android:gravity="center" >

            <Button
                android:id="@+id/btnPostToFB"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gray_background"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:text="@string/postToFB"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight=".8"
            android:gravity="center" >

            <Button
                android:id="@+id/btnPostToTwitter"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/gray_background"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:text="@string/postToTwitter"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight=".8"
            android:gravity="center" >

            <Button
                android:id="@+id/btnTwitterFeed"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gray_background"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:text="@string/twitterFeed"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
         <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1.3"
            android:gravity="center" >
            </LinearLayout>
    </LinearLayout>

</LinearLayout>